--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,7 +1,7 @@
 version: "2"
 sql:
-  - schema: "sql/schema"
-    queries: "sql/queries"
+  - schema: "sql/schema/schema.sql"
+    queries: "sql/queries/*.sql"
     engine: "postgresql"
     gen:
       go:
